--- a/new-app/src/index.css
+++ b/new-app/src/index.css
@@ -1,5 +1,6 @@
 body {
-    padding: 20px;
+    padding : 0px;
+    margin: 0px;    
     background-color: #27292c;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,4 +8,26 @@ body {
 
 h1 {
     margin-top: 30px;
+    margin-left: 30px;
+}
+h2{
+    color:#8fcef8;
+}
+.header{
+    display: flex;    
+    align-items: center;
+    padding: 0px 20px;    
+    background-color: #242424;
+    height: 100px;
+}
+
+.nav-logo{
+    width:50px;
+    margin-right: 20px;
+}
+.nav-list{
+    display: flex;
+    gap: 30px;
+    list-style: none;
+    
 }
