--- a/new-app/src/app.css
+++ b/new-app/src/app.css
@@ -16,4 +16,49 @@ body{
 }
 .header > span {
     color : white;
+    font-weight: bold;
+}
+.journal-entry {
+    display: flex;
+    width: 100%;
+    padding: 20px;    
+    gap: 15px;
+
+}
+.main-img-container{
+    width: 125px;
+    height: 160px;
+    overflow: hidden;
+    border-radius : 5px;  
+    flex-shrink: 0;
+}
+.journal-top-container{
+    display: flex;
+    margin-bottom: 0px;
+    align-items: center;
+    gap: 10px;
+}
+.journal-top-container > img{
+    width: 10px;
+}
+.journal-top-container > a {
+    font-size: 12px;    
+    color: gray;
+}
+.journal-place-title{
+    margin: 10px 0px;
+    padding:0px;
+}
+.main-img {
+    height: 100%;
+    width:100%;    
+}
+.journal-date{
+    font-size: 0.85rem;
+    font-weight:  bold;
+}
+.journal-description{
+    font-size: 13px;
+    margin: 0px;
+
 }
